Design updated and data added and vue wysag editor added

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,6 +5,9 @@
 @import "~@/assets/css/fontawesome-all.css";
 
 //vue -wysiwyg style
+@import "~vue-wysiwyg/dist/vueWysiwyg.css";
+
+//vue -wysiwyg style
 // @import "~vue-wysiwyg/dist/vueWysiwyg.css";
 
 
